--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,22 @@
 #
 # new_icon_2_alt_1: {}
 #
+bluesky_alt_1: {}
+
+code_studio:
+  - com.alif.ide/com.alif.app.AppActivity
+
+no_relapse:
+  - com.nofap/com.ironwill.MainActivity
+
+keep_talking_and_nobody_explodes:
+  - com.steelcrategames.keeptalkingandnobodyexplodes/com.unity3d.player.UnityPlayerActivity
+
+supeco:
+  - com.carrefourb2b.supeco/com.carrefourb2b.smart.MainActivity
+
+spin_browser:
+  - com.nationaledtech.spinbrowser/com.nationaledtech.spinbrowser.App
+
+web_filter:
+ - com.nationaledtech.managespin/com.nationaledtech.spinmanagement.ui.SplashActivity
