fix for KTaNE icon + alternative variant

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,6 +8,7 @@
 #
 # new_icon_2_alt_1: {}
 #
+
 bluesky_alt_1: {}
 
 code_studio:
@@ -18,6 +19,8 @@ no_relapse:
 
 keep_talking_and_nobody_explodes:
   - com.steelcrategames.keeptalkingandnobodyexplodes/com.unity3d.player.UnityPlayerActivity
+
+keep_talking_and_nobody_explodes_alt_1: {}
 
 supeco:
   - com.carrefourb2b.supeco/com.carrefourb2b.smart.MainActivity
