new compinfo: Vetevo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ spin_browser:
 
 web_filter:
  - com.nationaledtech.managespin/com.nationaledtech.spinmanagement.ui.SplashActivity
+
+vetevo:
+  - de.vetevo.bea/io.flutter.embedding.android.FlutterActivity
