new icon: AR Toolbox

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ web_filter:
 
 vetevo:
   - de.vetevo.bea/io.flutter.embedding.android.FlutterActivity
+
+ar_toolbox:
+  - fr.smarquis.ar_toolbox/fr.smarquis.ar_toolbox.SceneActivity
