new icon: Alfa Invest (also icon rename for Alfa Bank)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,6 @@ vetevo:
 
 ar_toolbox:
   - fr.smarquis.ar_toolbox/fr.smarquis.ar_toolbox.SceneActivity
+
+alfa_invest:
+  - ru.alfadirect.app/ru.alfadirect.splash.presentation.SplashActivity
