new icon: Apps & Games 4PDA (also fix for 4PDA icon dimensions)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -39,3 +39,6 @@ ar_toolbox:
 
 alfa_invest:
   - ru.alfadirect.app/ru.alfadirect.splash.presentation.SplashActivity
+
+_4pda_green:
+  - ru.freeman42.app4pda/ru.freeman42.app4pda.ui.MainActivity
