new icon: Fonbet (Фонбет)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -42,3 +42,6 @@ alfa_invest:
 
 _4pda_green:
   - ru.freeman42.app4pda/ru.freeman42.app4pda.ui.MainActivity
+
+fonbet:
+  - ru.bkfon/com.fonbet.splash.commons.fon.ui.view.SplashActivity
