new icon: MTS Bank (МТС Банк)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -45,3 +45,6 @@ _4pda_green:
 
 fonbet:
   - ru.bkfon/com.fonbet.splash.commons.fon.ui.view.SplashActivity
+
+mts_bank:
+  - ru.mts.bank/ru.mts.money.activities.MainActivity
