new icon: Katch!

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -48,3 +48,6 @@ fonbet:
 
 mts_bank:
   - ru.mts.bank/ru.mts.money.activities.MainActivity
+
+katch:
+  - com.aktech.katch/com.aktech.katch.SplashActivity
