icon link: Terminal -> Termux API

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -51,3 +51,6 @@ mts_bank:
 
 katch:
   - com.aktech.katch/com.aktech.katch.SplashActivity
+
+terminal:
+  - com.termux.api.activities.TermuxAPIActivity
