new icon: Thermex Home

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -54,3 +54,6 @@ katch:
 
 terminal:
   - com.termux.api.activities.TermuxAPIActivity
+
+thermex_home:
+  - com.thermex.ru/com.smart.ThingSplashActivity
