new icon: HomeWhiz

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -57,3 +57,6 @@ terminal:
 
 thermex_home:
   - com.thermex.ru/com.smart.ThingSplashActivity
+
+homewhiz:
+  - com.homewhiz.global/com.homewhiz.global.landing.LandingActivity
