new icon: Tricolor

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -60,3 +60,6 @@ thermex_home:
 
 homewhiz:
   - com.homewhiz.global/com.homewhiz.global.landing.LandingActivity
+
+tricolor:
+  - ru.iflex.android.a3colortv/ru.tricolor.android.f_splash.SplashActivityView
