new icon: Dolyami

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -63,3 +63,6 @@ homewhiz:
 
 tricolor:
   - ru.iflex.android.a3colortv/ru.tricolor.android.f_splash.SplashActivityView
+
+dolyami:
+  - ru.tinkoff.bnpl/ru.tinkoff.bnpl.IconNewYear
