--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,6 @@ tricolor:
 
 dolyami:
   - ru.tinkoff.bnpl/ru.tinkoff.bnpl.IconNewYear
+
+allinstruments:
+  - com.notissimus.allinstruments.android/ru.handh.vseinstrumenti.ui.splash.SplashActivity
