new icon: TATL School (Єдина Школа)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,6 @@ dolyami:
 
 allinstruments:
   - com.notissimus.allinstruments.android/ru.handh.vseinstrumenti.ui.splash.SplashActivity
+
+tatl_school:
+  - com.tatl.technology.usu_fp_schedule/com.tatl.technology.usu_fp_schedule.dev.ui.general.splash.SplashActivity
