new icon: @cosme

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -72,3 +72,6 @@ allinstruments:
 
 tatl_school:
   - com.tatl.technology.usu_fp_schedule/com.tatl.technology.usu_fp_schedule.dev.ui.general.splash.SplashActivity
+
+cosme:
+  - jp.co.istyle.atcosme/cosme.istyle.co.jp.uidapp.presentation.appstart.SplashActivity
