new icon: Olive Young (+ alt)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -75,3 +75,8 @@ tatl_school:
 
 cosme:
   - jp.co.istyle.atcosme/cosme.istyle.co.jp.uidapp.presentation.appstart.SplashActivity
+
+olive_young:
+  - com.cafe24.ec.pluseoliveyoung/com.cafe24.ec.pluseoliveyoung.app.main.MainAct
+
+olive_young_alt_1: {}
