new icon: Stori

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,6 @@ olive_young:
   - com.cafe24.ec.pluseoliveyoung/com.cafe24.ec.pluseoliveyoung.app.main.MainAct
 
 olive_young_alt_1: {}
+
+stori:
+  - ai.powerup.stori/ai.powerup.stori.home.mvp.ui.activity.NewSplashActivity
