new icon: Member Tools

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -83,3 +83,6 @@ olive_young_alt_1: {}
 
 stori:
   - ai.powerup.stori/ai.powerup.stori.home.mvp.ui.activity.NewSplashActivity
+
+member_tools:
+  - org.lds.ldstools/org.lds.ldstools.ux.main.MainActivity
