new icon: Helium Hotspot

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -86,3 +86,6 @@ stori:
 
 member_tools:
   - org.lds.ldstools/org.lds.ldstools.ux.main.MainActivity
+
+helium_hotspot:
+  - com.helium.wallet/com.helium.wallet.MainActivity
