fix add_icons.py and wrong compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,7 +53,7 @@ katch:
   - com.aktech.katch/com.aktech.katch.SplashActivity
 
 terminal:
-  - com.termux.api.activities.TermuxAPIActivity
+  - com.termux.api/com.termux.api.activities.TermuxAPIActivity
 
 thermex_home:
   - com.thermex.ru/com.smart.ThingSplashActivity
