--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,4 +29,63 @@ spin_browser:
   - com.nationaledtech.spinbrowser/com.nationaledtech.spinbrowser.App
 
 web_filter:
- - com.nationaledtech.managespin/com.nationaledtech.spinmanagement.ui.SplashActivity
+  - com.nationaledtech.managespin/com.nationaledtech.spinmanagement.ui.SplashActivity
+
+vetevo:
+  - de.vetevo.bea/io.flutter.embedding.android.FlutterActivity
+
+ar_toolbox:
+  - fr.smarquis.ar_toolbox/fr.smarquis.ar_toolbox.SceneActivity
+
+alfa_invest:
+  - ru.alfadirect.app/ru.alfadirect.splash.presentation.SplashActivity
+
+_4pda_green:
+  - ru.freeman42.app4pda/ru.freeman42.app4pda.ui.MainActivity
+
+fonbet:
+  - ru.bkfon/com.fonbet.splash.commons.fon.ui.view.SplashActivity
+
+mts_bank:
+  - ru.mts.bank/ru.mts.money.activities.MainActivity
+
+katch:
+  - com.aktech.katch/com.aktech.katch.SplashActivity
+
+terminal:
+  - com.termux.api/com.termux.api.activities.TermuxAPIActivity
+
+thermex_home:
+  - com.thermex.ru/com.smart.ThingSplashActivity
+
+homewhiz:
+  - com.homewhiz.global/com.homewhiz.global.landing.LandingActivity
+
+tricolor:
+  - ru.iflex.android.a3colortv/ru.tricolor.android.f_splash.SplashActivityView
+
+dolyami:
+  - ru.tinkoff.bnpl/ru.tinkoff.bnpl.IconNewYear
+
+allinstruments:
+  - com.notissimus.allinstruments.android/ru.handh.vseinstrumenti.ui.splash.SplashActivity
+
+tatl_school:
+  - com.tatl.technology.usu_fp_schedule/com.tatl.technology.usu_fp_schedule.dev.ui.general.splash.SplashActivity
+
+cosme:
+  - jp.co.istyle.atcosme/cosme.istyle.co.jp.uidapp.presentation.appstart.SplashActivity
+
+olive_young:
+  - com.cafe24.ec.pluseoliveyoung/com.cafe24.ec.pluseoliveyoung.app.main.MainAct
+
+olive_young_alt_1: {}
+
+stori:
+  - ai.powerup.stori/ai.powerup.stori.home.mvp.ui.activity.NewSplashActivity
+
+member_tools:
+  - org.lds.ldstools/org.lds.ldstools.ux.main.MainActivity
+
+helium_hotspot:
+  - com.helium.wallet/com.helium.wallet.MainActivity
