new icon: Nonograms Katana

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,6 @@ member_tools:
 
 helium_hotspot:
   - com.helium.wallet/com.helium.wallet.MainActivity
+
+nonograms_katana:
+  - com.ucdevs.jcross/com.ucdevs.jcross.MainActivity
