new icon: CPU Throttling Test

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -92,3 +92,6 @@ helium_hotspot:
 
 nonograms_katana:
   - com.ucdevs.jcross/com.ucdevs.jcross.MainActivity
+
+cpu_throttling_test:
+  - skynet.cputhrottlingtest/skynet.cputhrottlingtest.MainActivity
