new icon: Smart BPER Card

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,6 @@ nonograms_katana:
 
 cpu_throttling_test:
   - skynet.cputhrottlingtest/skynet.cputhrottlingtest.MainActivity
+
+smart_bper_card:
+  - it.gruppobper.smartbpercard/it.gruppobper.smartbpercard.MainActivity
