new icon: Shipt

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -98,3 +98,6 @@ cpu_throttling_test:
 
 smart_bper_card:
   - it.gruppobper.smartbpercard/it.gruppobper.smartbpercard.MainActivity
+
+shipt:
+  - com.shipt.groceries/com.shipt.MainActivity
