new icon: Mountainwatch

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,6 @@ smart_bper_card:
 
 shipt:
   - com.shipt.groceries/com.shipt.MainActivity
+
+mountainwatch:
+  - com.mountainwatch.mwapp/com.mountainwatch.mwapp.MainActivity
