new icon: Consumers Credit Union

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,6 @@ shipt:
 
 mountainwatch:
   - com.mountainwatch.mwapp/com.mountainwatch.mwapp.MainActivity
+
+consumers_credit_union:
+  - org.consumerscu/com.lumindigital.MainActivity
