new icon: Aqara Home

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,6 @@ mountainwatch:
 
 consumers_credit_union:
   - org.consumerscu/com.lumindigital.MainActivity
+
+aqara_home:
+  - com.lumiunited.aqarahome.play/com.lumiunited.aqara.main.SplashActivity
