new icon: POLREGIO

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -110,3 +110,6 @@ consumers_credit_union:
 
 aqara_home:
   - com.lumiunited.aqarahome.play/com.lumiunited.aqara.main.SplashActivity
+
+polregio:
+  - pl.polregio/pl.astarium.polregio.ui.startscreen.StartScreenActivity
