new icon: Mister Donut

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,6 @@ aqara_home:
 
 polregio:
   - pl.polregio/pl.astarium.polregio.ui.startscreen.StartScreenActivity
+
+mister_donut:
+  - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.SplashPage
