--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,30 @@ member_tools:
 
 helium_hotspot:
   - com.helium.wallet/com.helium.wallet.MainActivity
+
+nonograms_katana:
+  - com.ucdevs.jcross/com.ucdevs.jcross.MainActivity
+
+cpu_throttling_test:
+  - skynet.cputhrottlingtest/skynet.cputhrottlingtest.MainActivity
+
+smart_bper_card:
+  - it.gruppobper.smartbpercard/it.gruppobper.smartbpercard.MainActivity
+
+shipt:
+  - com.shipt.groceries/com.shipt.MainActivity
+
+mountainwatch:
+  - com.mountainwatch.mwapp/com.mountainwatch.mwapp.MainActivity
+
+consumers_credit_union:
+  - org.consumerscu/com.lumindigital.MainActivity
+
+aqara_home:
+  - com.lumiunited.aqarahome.play/com.lumiunited.aqara.main.SplashActivity
+
+polregio:
+  - pl.polregio/pl.astarium.polregio.ui.startscreen.StartScreenActivity
+
+mister_donut:
+  - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.SplashPage
