--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,33 @@ polregio:
 
 mister_donut:
   - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.SplashPage
+
+backbone:
+  - com.playbackbone.android/com.playbackbone.android.RootActivity
+
+bitpanda:
+  - com.bitpanda.bitpanda/com.bitpanda.feature.onboarding.authentication.impl.ui.RoutingActivity
+
+blinkit:
+  - com.grofers.customerapp/com.grofers.customerapp.DEFAULT
+
+chilis:
+  - com.brinker.chilis/com.brinker.chilis.features.LaunchActivity
+
+harley_davidson:
+  - com.harley_davidson.ride_planner/com.harleydavidson.rideplanner.onboarding.SplashActivity
+
+hooters:
+  - com.olo.hooters/com.punchhapp.MainActivity
+
+kvb_dlite:
+  - com.kvb.mobilebanking/com.kvb.mobilebanking.AppzillonMainScreen
+
+manifold:
+  - com.markets.manifold/com.markets.manifold.MainActivity
+
+ms_india:
+  - com.mns/com.mns.SplashActivity
+
+zara:
+  - com.inditex.zara/com.inditex.zara.MainActivityDefaultIcon
