--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -138,5 +138,9 @@ kvb_dlite:
 manifold:
   - com.markets.manifold/com.markets.manifold.MainActivity
 
-ms_india:
+marks_and_spencer:
   - com.mns/com.mns.SplashActivity
+  - com.marksandspencer.app/com.marksandspencer.app.startup.SplashScreenActivity
+  - cz.marksandspencer.app/cz.marksandspencer.app.ui.MainActivity
+  - com.alfuttaim.digital.mns.hk/com.alfuttaim.mns.activity.RootActivity
+  - com.fibaretail.marksandspencer/com.fibaretail.marksandspencer.MainActivity
