Add new icons (#760)
* Add new icons

* backbone
* bitpanda
* blinkit
* chilis
* harley_davidson
* hooters
* kvb_dlite
* manifold
* ms_india
* zara

* Fix conflicts & Update compinfos

	modified:   app/src/main/assets/appfilter.xml
	modified:   app/src/main/res/xml/appfilter.xml
	modified:   resources/new_icons.yaml
	deleted:    resources/utilities/icons/blinkit.png
	deleted:    resources/utilities/icons/blinkit.svg
	deleted:    resources/utilities/icons/zara.png
	deleted:    resources/utilities/icons/zara.svg

* Update icons & compinfos

	modified:   resources/new_icons.yaml
	modified:   resources/utilities/icons/harley_davidson.png
	modified:   resources/utilities/icons/harley_davidson.svg
	new file:   resources/utilities/icons/marks_and_spencer.png
	new file:   resources/utilities/icons/marks_and_spencer.svg
	deleted:    resources/utilities/icons/ms_india.png
	deleted:    resources/utilities/icons/ms_india.svg

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,31 @@ polregio:
 
 mister_donut:
   - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.SplashPage
+
+backbone:
+  - com.playbackbone.android/com.playbackbone.android.RootActivity
+
+bitpanda:
+  - com.bitpanda.bitpanda/com.bitpanda.feature.onboarding.authentication.impl.ui.RoutingActivity
+
+chilis:
+  - com.brinker.chilis/com.brinker.chilis.features.LaunchActivity
+
+harley_davidson:
+  - com.harley_davidson.ride_planner/com.harleydavidson.rideplanner.onboarding.SplashActivity
+
+hooters:
+  - com.olo.hooters/com.punchhapp.MainActivity
+
+kvb_dlite:
+  - com.kvb.mobilebanking/com.kvb.mobilebanking.AppzillonMainScreen
+
+manifold:
+  - com.markets.manifold/com.markets.manifold.MainActivity
+
+marks_and_spencer:
+  - com.mns/com.mns.SplashActivity
+  - com.marksandspencer.app/com.marksandspencer.app.startup.SplashScreenActivity
+  - cz.marksandspencer.app/cz.marksandspencer.app.ui.MainActivity
+  - com.alfuttaim.digital.mns.hk/com.alfuttaim.mns.activity.RootActivity
+  - com.fibaretail.marksandspencer/com.fibaretail.marksandspencer.MainActivity
