--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -144,3 +144,69 @@ marks_and_spencer:
   - cz.marksandspencer.app/cz.marksandspencer.app.ui.MainActivity
   - com.alfuttaim.digital.mns.hk/com.alfuttaim.mns.activity.RootActivity
   - com.fibaretail.marksandspencer/com.fibaretail.marksandspencer.MainActivity
+
+arcticons_day_and_night:
+  - com.donnnno.arcticons.daynight/com.donnnno.arcticons.activities.SplashActivity
+
+bluetooth_le_spam:
+  - de.simon.dankelmann.bluetoothlespam/de.simon.dankelmann.bluetoothlespam.MainActivity
+
+chooser:
+  - com.uravgcode.chooser/com.uravgcode.chooser.MainActivity
+
+chrono_foss:
+  - com.vicolo.chrono/com.vicolo.chrono.MainActivity
+
+cutecalc:
+  - com.sosauce.cutecalc/com.sosauce.cutecalc.MainActivity
+
+dagger:
+  - com.nikola.jakshic.dagger/com.nikola.jakshic.dagger.MainActivity
+
+fontgallery:
+  - com.adeeteya.font_gallery/com.adeeteya.font_gallery.MainActivity
+
+fossify_gallery:
+  - org.fossify.gallery/org.fossify.gallery.activities.SplashActivity.Green
+
+geto:
+  - com.android.geto/com.android.geto.MainActivity
+
+guessiron:
+  - de.indie42.guessiron/de.indie42.guessiron.MainActivity
+
+keep_alive:
+  - io.keepalive.android/io.keepalive.android.MainActivity
+
+libre_memory_game:
+  - org.quentin_bettoum.librememorygame/com.godot.game.GodotApp
+
+markdown_editor:
+  - com.adeeteya.markdown_editor/com.adeeteya.markdown_editor.MainActivity
+
+mercurygram:
+  - it.belloworld.mercurygram/org.telegram.messenger.DefaultIcon
+
+nfc_reader:
+  - com.github.muellerma.nfcreader/com.github.muellerma.nfcreader.MainActivity
+
+notie:
+  - com.cworld.notie/com.cworld.notie.MainActivity
+
+oxchat:
+  - com.oxchat.nostr/com.oxchat.nostr.MainActivity
+
+reykunyutsyip:
+  - com.kip.reykunyutsyip/com.kip.reykunyu.MainActivity
+
+rimusic:
+  - it.fast4x.rimusic/it.vfsfitvnm.vimusic.MainActivity
+
+timeto_me:
+  - me.timeto.app/me.timeto.app.MainActivity
+
+trale:
+  - de.quantumphysique.trale/de.quantumphysique.trale.MainActivity
+
+vergissnix:
+  - de.andicodes.vergissnix/de.andicodes.vergissnix.MainActivity
