add componentinfo + fix icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -210,3 +210,6 @@ trale:
 
 vergissnix:
   - de.andicodes.vergissnix/de.andicodes.vergissnix.MainActivity
+
+diohub:
+  - com.felix.diohub.dev/com.felix.diohub.MainActivity
