Updated Oneplus Icon componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -213,3 +213,13 @@ vergissnix:
 
 diohub:
   - com.felix.diohub.dev/com.felix.diohub.MainActivity
+
+clock:
+  - com.oneplus.deskclock/com.oplus.alarmclock.AlarmClock
+  
+calculator:
+  - com.oneplus.calculator/com.android.calculator2.Calculator   
+
+weather:
+  - net.oneplus.weather/com.oplus.weather.main.view.WeatherMainActivity
+
