icon update: Yandex.Music

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -223,3 +223,5 @@ calculator:
 weather:
   - net.oneplus.weather/com.oplus.weather.main.view.WeatherMainActivity
 
+yandex_music:
+  - ru.yandex.music/ru.yandex.music.main.RebrandingScreenActivityAlias
