--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -225,3 +225,6 @@ weather:
 
 yandex_music:
   - ru.yandex.music/ru.yandex.music.main.RebrandingScreenActivityAlias
+
+vacu:
+  - com.softek.ofxclmobile.virginiacu/com.softek.mfm.SplashActivity
