new compinfo: Freestyle Librelink

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -228,3 +228,6 @@ yandex_music:
 
 vacu:
   - com.softek.ofxclmobile.virginiacu/com.softek.mfm.SplashActivity
+
+freestyle_librelink:
+  - com.freestylelibre.app.es/com.librelink.app.ui.SplashActivity
