--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -231,3 +231,6 @@ vacu:
 
 freestyle_librelink:
   - com.freestylelibre.app.es/com.librelink.app.ui.SplashActivity
+
+_433:
+  - com.football433/com.football433.MainActivity
