new icon: FarOut

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -234,3 +234,6 @@ freestyle_librelink:
 
 _433:
   - com.football433/com.football433.MainActivity
+
+farout:
+  - com.atlasguides.guthook/com.atlasguides.ui.MainActivity
