new icon: Ampol

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -237,3 +237,6 @@ _433:
 
 farout:
   - com.atlasguides.guthook/com.atlasguides.ui.MainActivity
+
+ampol:
+  - au.com.ampol.flagship/au.com.ampol.flagship.refactor.page.splash.SplashScreenActivity
