new icon: Thalia

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -240,3 +240,6 @@ farout:
 
 ampol:
   - au.com.ampol.flagship/au.com.ampol.flagship.refactor.page.splash.SplashScreenActivity
+
+thalia:
+  - eu.thalia.app/eu.thalia.app.ui.appstart.BootActivity
