--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -223,3 +223,23 @@ calculator:
 weather:
   - net.oneplus.weather/com.oplus.weather.main.view.WeatherMainActivity
 
+yandex_music:
+  - ru.yandex.music/ru.yandex.music.main.RebrandingScreenActivityAlias
+
+vacu:
+  - com.softek.ofxclmobile.virginiacu/com.softek.mfm.SplashActivity
+
+freestyle_librelink:
+  - com.freestylelibre.app.es/com.librelink.app.ui.SplashActivity
+
+_433:
+  - com.football433/com.football433.MainActivity
+
+farout:
+  - com.atlasguides.guthook/com.atlasguides.ui.MainActivity
+
+ampol:
+  - au.com.ampol.flagship/au.com.ampol.flagship.refactor.page.splash.SplashScreenActivity
+
+thalia:
+  - eu.thalia.app/eu.thalia.app.ui.appstart.BootActivity
