new icon: Airalo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -243,3 +243,6 @@ ampol:
 
 thalia:
   - eu.thalia.app/eu.thalia.app.ui.appstart.BootActivity
+
+airalo:
+  - com.mobillium.airalo/com.mobillium.airalo.ui.splash.SplashActivity
