new icon: Open Food Facts

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -246,3 +246,6 @@ thalia:
 
 airalo:
   - com.mobillium.airalo/com.mobillium.airalo.ui.splash.SplashActivity
+
+open_food_facts:
+  - org.openfoodfacts.scanner/org.openfoodfacts.app.MainActivity
