--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -249,3 +249,6 @@ airalo:
 
 open_food_facts:
   - org.openfoodfacts.scanner/org.openfoodfacts.app.MainActivity
+
+yale:
+  - com.august.bennu/com.august.luna.ui.startup.LandingPage
