misc: move old OpenFoodFacts icon to alt_1

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -247,7 +247,7 @@ thalia:
 airalo:
   - com.mobillium.airalo/com.mobillium.airalo.ui.splash.SplashActivity
 
-open_food_facts:
+openfoodfacts:
   - org.openfoodfacts.scanner/org.openfoodfacts.app.MainActivity
 
 yale:
