--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -252,3 +252,21 @@ openfoodfacts:
 
 yale:
   - com.august.bennu/com.august.luna.ui.startup.LandingPage
+
+dsu_sideloader:
+  - vegabobo.dsusideloader/vegabobo.dsusideloader.MainActivity
+
+evie:
+  - com.lenntt.evoicereader/com.lenntt.evoicereader.ui.MainActivity
+
+gps_locker:
+  - com.github.mrrar.gps_lock/com.github.mrrar.gps_locker.MainActivity
+
+nextcloud_phonetrack:
+  - net.eneiluj.nextcloud.phonetrack/net.eneiluj.nextcloud.phonetrack.android.activity.LogjobsListViewActivity
+
+septa:
+  - org.septa.android.app/org.septa.android.app.SplashScreenActivity
+
+sonolus:
+  - com.FosFenes.Sonolus/com.unity3d.player.UnityPlayerActivity
