--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -270,3 +270,39 @@ septa:
 
 sonolus:
   - com.FosFenes.Sonolus/com.unity3d.player.UnityPlayerActivity
+
+delivering_hope:
+  - com.DavidWu.DeliveringHope/com.unity3d.player.UnityPlayerActivity
+
+dr_wolf:
+  - com.chess.chesscoach/com.chess.chesscoach.MainActivity
+
+eternal_card_game:
+  - com.direwolfdigital.Phoenix/dwd.core.android.MainActivity
+
+eternium:
+  - com.makingfun.mageandminions/com.makingfun.mageandminions.Main
+
+inclusenas:
+  - app.aresan.miguel.inclusenas/app.aresan.miguel.inclusenas.presentation.splash.SplashActivity
+
+kura_sushi_rewards:
+  - com.kurasushi.app/com.punchhapp.MainActivity
+
+pax_mobile:
+  - com.pax.app/com.pax.app.welcome.SplashActivity
+
+pixez:
+  - com.perol.pixez/com.perol.pixez.MainActivity
+
+planet_fitness_workouts:
+  - com.planetfitness/crc64c58d90dbc7155540.MainActivity
+
+pockettube:
+  - com.youtubesubscriptionmanager/io.flutter.embedding.android.FlutterActivity
+
+tasker_secondary:
+  - net.dinglisch.android.taskerm/com.joaomgcd.taskerm.util.ActivitySecondaryApp
+
+terraria:
+  - com.amz.games505.Terraria/com.unity3d.player.UnityPlayerActivity
