--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -306,3 +306,11 @@ tasker_secondary:
 
 terraria:
   - com.amz.games505.Terraria/com.unity3d.player.UnityPlayerActivity
+
+terraria_alt_1: {}
+
+droidfs:
+  - sushi.hardcore.droidfs/sushi.hardcore.droidfs.MainActivity
+
+vendetta:
+  - dev.beefers.vendetta/com.discord.main.MainDefault
