--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -289,6 +289,8 @@ inclusenas:
 kura_sushi_rewards:
   - com.kurasushi.app/com.punchhapp.MainActivity
 
+kura_sushi_rewards_alt_1: {}
+
 pax_mobile:
   - com.pax.app/com.pax.app.welcome.SplashActivity
 
