misc: move Eternium to Alt 1, add more simplified variant

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -283,6 +283,8 @@ eternal_card_game:
 eternium:
   - com.makingfun.mageandminions/com.makingfun.mageandminions.Main
 
+eternium_alt_1: {}
+
 inclusenas:
   - app.aresan.miguel.inclusenas/app.aresan.miguel.inclusenas.presentation.splash.SplashActivity
 
