new icon: Beach Buggy Racing 2

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -318,3 +318,6 @@ droidfs:
 
 vendetta:
   - dev.beefers.vendetta/com.discord.main.MainDefault
+
+beach_buggy_racing_2:
+  - com.vectorunit.cobalt.googleplay/com.vectorunit.cobalt.MainActivity
