fix icon: Delivering Hope (+ alt_1)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -274,6 +274,8 @@ sonolus:
 delivering_hope:
   - com.DavidWu.DeliveringHope/com.unity3d.player.UnityPlayerActivity
 
+delivering_hope_alt_1: {}
+
 dr_wolf:
   - com.chess.chesscoach/com.chess.chesscoach.MainActivity
 
