new year requests (#765)
* new icon: Airalo

* new icon: Open Food Facts

* new icon: Yale

* misc: move old OpenFoodFacts icon to alt_1

* misc: fix icon link for OpenContacts

* add icons

* fix conflicts

* add icons

* add componentinfo + fix conflict

* fix icon: DSU Sideloader

* fix icon: Eternal Card Game

* fix icon: Evie Reader

* fix icon: Inclusenas

* fix icon: Eternal Card Game

* fix icon: Kura Sushi Rewards (+ alt_1)

* fix icon: Planet Fitness Workouts

* fix icon: Sonolus

* fix icons: Tasker

* misc: move Eternium to Alt 1, add more simplified variant

* new icon: Beach Buggy Racing 2

* fix icon: Delivering Hope (+ alt_1)

---------

Co-authored-by: GitGitro <108683123+GitGitro@users.noreply.github.com>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -243,3 +243,83 @@ ampol:
 
 thalia:
   - eu.thalia.app/eu.thalia.app.ui.appstart.BootActivity
+
+airalo:
+  - com.mobillium.airalo/com.mobillium.airalo.ui.splash.SplashActivity
+
+openfoodfacts:
+  - org.openfoodfacts.scanner/org.openfoodfacts.app.MainActivity
+
+yale:
+  - com.august.bennu/com.august.luna.ui.startup.LandingPage
+
+dsu_sideloader:
+  - vegabobo.dsusideloader/vegabobo.dsusideloader.MainActivity
+
+evie:
+  - com.lenntt.evoicereader/com.lenntt.evoicereader.ui.MainActivity
+
+gps_locker:
+  - com.github.mrrar.gps_lock/com.github.mrrar.gps_locker.MainActivity
+
+nextcloud_phonetrack:
+  - net.eneiluj.nextcloud.phonetrack/net.eneiluj.nextcloud.phonetrack.android.activity.LogjobsListViewActivity
+
+septa:
+  - org.septa.android.app/org.septa.android.app.SplashScreenActivity
+
+sonolus:
+  - com.FosFenes.Sonolus/com.unity3d.player.UnityPlayerActivity
+
+delivering_hope:
+  - com.DavidWu.DeliveringHope/com.unity3d.player.UnityPlayerActivity
+
+delivering_hope_alt_1: {}
+
+dr_wolf:
+  - com.chess.chesscoach/com.chess.chesscoach.MainActivity
+
+eternal_card_game:
+  - com.direwolfdigital.Phoenix/dwd.core.android.MainActivity
+
+eternium:
+  - com.makingfun.mageandminions/com.makingfun.mageandminions.Main
+
+eternium_alt_1: {}
+
+inclusenas:
+  - app.aresan.miguel.inclusenas/app.aresan.miguel.inclusenas.presentation.splash.SplashActivity
+
+kura_sushi_rewards:
+  - com.kurasushi.app/com.punchhapp.MainActivity
+
+kura_sushi_rewards_alt_1: {}
+
+pax_mobile:
+  - com.pax.app/com.pax.app.welcome.SplashActivity
+
+pixez:
+  - com.perol.pixez/com.perol.pixez.MainActivity
+
+planet_fitness_workouts:
+  - com.planetfitness/crc64c58d90dbc7155540.MainActivity
+
+pockettube:
+  - com.youtubesubscriptionmanager/io.flutter.embedding.android.FlutterActivity
+
+tasker_secondary:
+  - net.dinglisch.android.taskerm/com.joaomgcd.taskerm.util.ActivitySecondaryApp
+
+terraria:
+  - com.amz.games505.Terraria/com.unity3d.player.UnityPlayerActivity
+
+terraria_alt_1: {}
+
+droidfs:
+  - sushi.hardcore.droidfs/sushi.hardcore.droidfs.MainActivity
+
+vendetta:
+  - dev.beefers.vendetta/com.discord.main.MainDefault
+
+beach_buggy_racing_2:
+  - com.vectorunit.cobalt.googleplay/com.vectorunit.cobalt.MainActivity
