new icon: Tabor

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 gps_setter:
   - com.lexa.fakegps/com.lexa.fakegps.ui.Main
+
+tabor:
+  - ru.tabor.search/ru.tabor.search2.activities.SplashActivity
