new icon: Desert Finanical

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ gps_setter:
 
 tabor:
   - ru.tabor.search/ru.tabor.search2.activities.SplashActivity
+
+desert_finanical:
+  - com.desertschools.mobilebanking/com.desertschools.mobilebanking.MainActivity
