new icon: Waterdrop

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ tabor:
 
 desert_finanical:
   - com.desertschools.mobilebanking/com.desertschools.mobilebanking.MainActivity
+
+waterdrop:
+  - com.waterdrop.hydrationapp/com.waterdrop.hydrationapp.ui.DispatchActivity
