new icon: Ruppu

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ desert_finanical:
 
 waterdrop:
   - com.waterdrop.hydrationapp/com.waterdrop.hydrationapp.ui.DispatchActivity
+
+ruppu:
+  - it.ruppu/it.ruppu.ui.intro.LaunchActivity
