new icon: Ana Mara Supermercado

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ waterdrop:
 
 ruppu:
   - it.ruppu/it.ruppu.ui.intro.LaunchActivity
+
+ana_mara_supermercado:
+  - br.com.gsgroup.zoombox.anamara/br.com.gsgroup.zoombox.anamara.MainActivity
