new icon: Mighty DOOM

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,6 @@ ruppu:
 
 ana_mara_supermercado:
   - br.com.gsgroup.zoombox.anamara/br.com.gsgroup.zoombox.anamara.MainActivity
+
+doom_mighty:
+  - com.bethsoft.ubu/com.google.firebase.MessagingUnityPlayerActivity
