--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,6 +9,27 @@
 # new_icon_2_alt_1: {}
 #
 
+gps_setter:
+  - com.lexa.fakegps/com.lexa.fakegps.ui.Main
+
+tabor:
+  - ru.tabor.search/ru.tabor.search2.activities.SplashActivity
+
+desert_finanical:
+  - com.desertschools.mobilebanking/com.desertschools.mobilebanking.MainActivity
+
+waterdrop:
+  - com.waterdrop.hydrationapp/com.waterdrop.hydrationapp.ui.DispatchActivity
+
+ruppu:
+  - it.ruppu/it.ruppu.ui.intro.LaunchActivity
+
+ana_mara_supermercado:
+  - br.com.gsgroup.zoombox.anamara/br.com.gsgroup.zoombox.anamara.MainActivity
+
+doom_mighty:
+  - com.bethsoft.ubu/com.google.firebase.MessagingUnityPlayerActivity
+
 island_is:
   - is.island.app/is.island.app.MainActivity
 
