--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,3 +71,13 @@ chatgemini:
 
 appteka:
   - com.tomclaw.appsend/com.tomclaw.appsend.main.home.HomeActivity
+
+mastercom_workbook:
+  - com.stypox.mastercom_workbook/com.stypox.mastercom_workbook.MainActivity
+
+simplereminder:
+  - felixwiemuth.simplereminder/felixwiemuth.simplereminder.ui.reminderslist.RemindersListActivity
+  - felixwiemuth.simplereminder/felixwiemuth.simplereminder.ui.AddReminderDialogActivity
+
+upvpn:
+  - app.upvpn.upvpn/app.upvpn.upvpn.MainActivity
