new icon: Yandex.Edadeal

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 evie_reader:
   - com.lenntt.evoicereader/com.lenntt.evoicereader.ui.MainActivity
+
+yandex_edadeal:
+  - com.edadeal.android/com.edadeal.android.ui.main.MainActivity
