--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ evie_reader:
 
 yandex_edadeal:
   - com.edadeal.android/com.edadeal.android.ui.main.MainActivity
+
+yandex_zen:
+  - ru.zen.android/com.yandex.zen.ZenMainActivity
