--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ yandex_edadeal:
 
 yandex_zen:
   - ru.zen.android/com.yandex.zen.ZenMainActivity
+
+yandex_messenger:
+  - com.yandex.yamb.canary/com.yandex.yamb.ui.activities.MainActivity
