--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ yandex_zen:
 
 yandex_messenger:
   - com.yandex.yamb.canary/com.yandex.yamb.ui.activities.MainActivity
+
+yandex_services:
+  - com.yandex.uslugi.clients/com.yandex.uslugi.customerapp.presentation.splash.SplashActivity
