new icon: Yandex.Services Pro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ yandex_messenger:
 
 yandex_services:
   - com.yandex.uslugi.clients/com.yandex.uslugi.customerapp.presentation.splash.SplashActivity
+
+yandex_services_pro:
+  - com.yandex.uslugi/com.yandex.uslugi.workerapp.presentation.splash.SplashActivity
