new icon: Yandex.Pro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,7 @@ yandex_services:
 
 yandex_services_pro:
   - com.yandex.uslugi/com.yandex.uslugi.workerapp.presentation.splash.SplashActivity
+
+yandex_pro:
+  - ru.yandex.taximeter/ru.yandex.taximeter.yandex_driver.MainActivity
+  - ru.yandex.taximeter.beta/ru.yandex.taximeter.yandex_driver.MainActivity
