--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ yandex_services_pro:
 yandex_pro:
   - ru.yandex.taximeter/ru.yandex.taximeter.yandex_driver.MainActivity
   - ru.yandex.taximeter.beta/ru.yandex.taximeter.yandex_driver.MainActivity
+
+yandex_key:
+  - ru.yandex.key/com.yandex.auth.authenticator.android.ui.activities.MainActivity
