new icon: Yandex.Eats Vendor

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ yandex_pro:
 
 yandex_key:
   - ru.yandex.key/com.yandex.auth.authenticator.android.ui.activities.MainActivity
+
+yandex_eats_vendor:
+  - ru.foodfox.vendor/ru.foodfox.vendor.presentation.ui.activity.MainActivity
