new icon: Yandex.Eats Courier

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,6 @@ yandex_key:
 
 yandex_eats_vendor:
   - ru.foodfox.vendor/ru.foodfox.vendor.presentation.ui.activity.MainActivity
+
+yandex_eats_courier:
+  - ru.foodfox.courier.debug.releaseserver/ru.foodfox.courier.ui.activities.main.MainActivity
