new icon: Yandex.Flights

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -39,3 +39,6 @@ yandex_eats_vendor:
 
 yandex_eats_courier:
   - ru.foodfox.courier.debug.releaseserver/ru.foodfox.courier.ui.activities.main.MainActivity
+
+yandex_flights:
+  - ru.yandex.mobile.avia/ru.yandex.mobile.avia.ui.activity.SplashActivity
