new icon: Yandex.Widget

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -42,3 +42,6 @@ yandex_eats_courier:
 
 yandex_flights:
   - ru.yandex.mobile.avia/ru.yandex.mobile.avia.ui.activity.SplashActivity
+
+yandex_widget:
+  - com.yandex.widget/ru.yandex.searchlib.widget.standalone.WidgetLaunchActivity
