new icon: Yandex.Gamesflow

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -45,3 +45,7 @@ yandex_flights:
 
 yandex_widget:
   - com.yandex.widget/ru.yandex.searchlib.widget.standalone.WidgetLaunchActivity
+
+yandex_gamesflow:
+  - ru.yandex.gamesflow/ru.yandex.igrotok.MainActivity
+  - ru.yandex.gamesflow.lite/ru.yandex.gamesflow.lite.LauncherActivity
