new icon: Yandex.Tickets

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,6 @@ yandex_widget:
 yandex_gamesflow:
   - ru.yandex.gamesflow/ru.yandex.igrotok.MainActivity
   - ru.yandex.gamesflow.lite/ru.yandex.gamesflow.lite.LauncherActivity
+
+yandex_tickets:
+  - ru.yandex.mobile.ticketsystem.scanner/ru.yandex.tickets.mobile.MainActivity
