new icon: Yandex.Fuel

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -52,3 +52,6 @@ yandex_gamesflow:
 
 yandex_tickets:
   - ru.yandex.mobile.ticketsystem.scanner/ru.yandex.tickets.mobile.MainActivity
+
+yandex_fuel:
+  - ru.yandex.mobile.gasstations/ru.yandex.mobile.gasstations.view.launch.NewYearLauncher
