new icon: Yandex.Map Editor

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,3 +55,6 @@ yandex_tickets:
 
 yandex_fuel:
   - ru.yandex.mobile.gasstations/ru.yandex.mobile.gasstations.view.launch.NewYearLauncher
+
+yandex_map_editor:
+  - com.yandex.maps.mrcpublic/com.yandex.maps.mrcpublic.activities.SplashScreenActivity
