new icon: Yandex.Realty

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -58,3 +58,6 @@ yandex_fuel:
 
 yandex_map_editor:
   - com.yandex.maps.mrcpublic/com.yandex.maps.mrcpublic.activities.SplashScreenActivity
+
+yandex_realty:
+  - com.yandex.mobile.realty/com.yandex.mobile.realty.activity.SplashActivity
