new icon: Yandex.Health

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,6 @@ yandex_map_editor:
 
 yandex_realty:
   - com.yandex.mobile.realty/com.yandex.mobile.realty.activity.SplashActivity
+
+yandex_health:
+  - ru.yandex.med/ru.yandex.med.ui.splash.SplashActivity
