new icon: Yandex.DivKit

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,6 @@ yandex_realty:
 
 yandex_health:
   - ru.yandex.med/ru.yandex.med.ui.splash.SplashActivity
+
+yandex_divkit:
+  - com.yandex.divkit.demo/com.yandex.divkit.demo.LauncherActivity
