new icon: Yandex.DivKit Pro

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,6 @@ yandex_health:
 
 yandex_divkit:
   - com.yandex.divkit.demo/com.yandex.divkit.demo.LauncherActivity
+
+yandex_divkit_pro:
+  - com.yandex.divpro.viewer/com.yandex.divpro.viewer.LauncherActivity
