new icon: Yandex.Telemost

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -70,3 +70,6 @@ yandex_divkit:
 
 yandex_divkit_pro:
   - com.yandex.divpro.viewer/com.yandex.divpro.viewer.LauncherActivity
+
+yandex_telemost:
+  - ru.yandex.telemost/com.yandex.telemost.app.MainActivity
