new icon: Yandex.Tasks

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -73,3 +73,6 @@ yandex_divkit_pro:
 
 yandex_telemost:
   - ru.yandex.telemost/com.yandex.telemost.app.MainActivity
+
+yandex_tasks:
+  - com.yandex.tasks.androidapp/com.yandex.toloka.androidapp.splash.SplashScreenActivity
