new icon: Yandex.Games

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -76,3 +76,6 @@ yandex_telemost:
 
 yandex_tasks:
   - com.yandex.tasks.androidapp/com.yandex.toloka.androidapp.splash.SplashScreenActivity
+
+yandex_games:
+  - ru.yandex.games/ru.yandex.games.MainActivity
