new icon: Yandex.Travel

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -79,3 +79,6 @@ yandex_tasks:
 
 yandex_games:
   - ru.yandex.games/ru.yandex.games.MainActivity
+
+yandex_travel:
+  - ru.yandex.travel/ru.yandex.travel.splash.presentation.SplashActivity
