new icon: Yandex.Drive

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,6 @@ yandex_games:
 
 yandex_travel:
   - ru.yandex.travel/ru.yandex.travel.splash.presentation.SplashActivity
+
+yandex_drive:
+  - com.yandex.mobile.drive/com.yandex.mobile.drive.Container
