new icon: Yandex.Auto

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -85,3 +85,6 @@ yandex_travel:
 
 yandex_drive:
   - com.yandex.mobile.drive/com.yandex.mobile.drive.Container
+
+yandex_auto:
+  - yandex.auto.mobile/yandex.auto.mobile.app.presentation.splash.SplashActivity
