new icon: Yandex.Arenda

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -88,3 +88,6 @@ yandex_drive:
 
 yandex_auto:
   - yandex.auto.mobile/yandex.auto.mobile.app.presentation.splash.SplashActivity
+
+yandex_arenda:
+  - ru.yandex.mobile.arenda/ru.yandex.mobile.arenda.ui.splash.activity.SplashActivity
