new compinfo: Yandex.Music

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -91,3 +91,6 @@ yandex_auto:
 
 yandex_arenda:
   - ru.yandex.mobile.arenda/ru.yandex.mobile.arenda.ui.splash.activity.SplashActivity
+
+yandex_music:
+  - ru.yandex.music/ru.yandex.music.main.MainScreenActivityAlias
