new icon: Yandex.Meteum

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,3 +94,6 @@ yandex_arenda:
 
 yandex_music:
   - ru.yandex.music/ru.yandex.music.main.MainScreenActivityAlias
+
+yandex_meteum:
+  - ai.meteum/ru.yandex.weatherplugin.ui.activity.SplashActivity
