new icon: Yandex.Pay

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,6 @@ yandex_music:
 
 yandex_meteum:
   - ai.meteum/ru.yandex.weatherplugin.ui.activity.SplashActivity
+
+yandex_pay:
+  - com.yandex.bank/com.yandex.bank.screens.MainActivity
