--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -100,3 +100,6 @@ yandex_meteum:
 
 yandex_pay:
   - com.yandex.bank/com.yandex.bank.screens.MainActivity
+
+yandex_appmetrica:
+  - ru.yandex.mobile.appmetrica/ru.yandex.metrica.ui.PreloaderActivity
