new icon: Yandex.Direct

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -103,3 +103,6 @@ yandex_pay:
 
 yandex_appmetrica:
   - ru.yandex.mobile.appmetrica/ru.yandex.metrica.ui.PreloaderActivity
+
+yandex_direct:
+  - ru.yandex.direct/ru.yandex.direct.newui.splash.SplashActivity
