new icon: Auto.ru

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -106,3 +106,6 @@ yandex_appmetrica:
 
 yandex_direct:
   - ru.yandex.direct/ru.yandex.direct.newui.splash.SplashActivity
+
+auto_ru:
+  - ru.auto.araru.auto.ara.SplashActivity
