new icon: Yandex.Cloud

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -109,3 +109,6 @@ yandex_direct:
 
 auto_ru:
   - ru.auto.araru.auto.ara.SplashActivity
+
+yandex_cloud:
+  - ru.yandex.cloud/ru.yandex.cloud.pages.MainActivity
