--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -112,3 +112,6 @@ auto_ru:
 
 yandex_cloud:
   - ru.yandex.cloud/ru.yandex.cloud.pages.MainActivity
+
+yandex_tracker:
+  - ru.yandex.cloud.tracker/ru.yandex.cloud.pages.main.MainActivity
