new icon: Yandex.Team Calendar

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -115,3 +115,6 @@ yandex_cloud:
 
 yandex_tracker:
   - ru.yandex.cloud.tracker/ru.yandex.cloud.pages.main.MainActivity
+
+yandex_team_calendar:
+  - ru.yandex_team.calendar_app/ru.yandex_team.calendar_app.pages.main.MainActivity
