--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -118,3 +118,6 @@ yandex_tracker:
 
 yandex_team_calendar:
   - ru.yandex_team.calendar_app/ru.yandex_team.calendar_app.pages.main.MainActivity
+
+yandex_courier:
+  - com.yandex.courier/com.yandex.courier.MainActivity
